# flask_crud

./: README.md  pyproject.toml
app/: __init__.py  books.py  serealizer.py
migrations/versions/: 00da55b484ea_.py  7d2f668ea81d_.py
