[tool.poetry]
name = "flask_crud"
version = "0.1.0"
description = ""
authors = ["SilasAlvesTi <silas.ifce.ti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.28.1"

[tool.poetry.dev-dependencies]
requests = "^2.28.1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
